[BEE-69470] Migrate commons-lang2 to jdk apis